--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -1,11 +1,16 @@
+@use "../abstracts/index" as *;
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --primary-color: #{$primary-color};
+  --secondary-color: #{$secondary-color};
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,17 +22,20 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: $white;  
+  font-family: $font-family;
+  font-size: $font-size;
+  line-height: $line-height;
 }
+
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
