User API added useAPI hook added Login/Registration interface design Recipe list design New Recipe interface Recipe model and API Recipe picture, favourite and tag API

--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -11,6 +11,7 @@
   --background-end-rgb: 255, 255, 255;
   --primary-color: #{$primary-color};
   --secondary-color: #{$secondary-color};
+  --tertiary-color: #{$tertiary-color};
 }
 
 @media (prefers-color-scheme: dark) {
