--- a/src/styles/scss/abstracts/_variables.scss
+++ b/src/styles/scss/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 // declare all the variables here
 $primary-color: #B20000;
-$secondary-color: #FEF4C0; //
+$secondary-color: #FEF4C0;
+$tertiary-color: #FD292F;
 $border-color: #f4f4f4;
 $border-radius: 0.25rem;
 $box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
