Dakr mode CSS added

--- a/src/styles/scss/abstracts/_variables.scss
+++ b/src/styles/scss/abstracts/_variables.scss
@@ -1,4 +1,26 @@
-// declare all the variables here
+// Light mode colors
+$light-primary-color: #B20000;
+$light-secondary-color: #FEF4C0;
+$light-tertiary-color: #FD292F;
+$light-background-start: #D6DBDC;
+$light-background-end: #FFFFFF;
+$light-foreground: #000000;
+
+$light-sidebar-bg: #B20000;
+$light-sidebar-text: #ffffff;
+
+// Dark mode colors
+$dark-primary-color: #1F2937;
+$dark-secondary-color: #F5E1A4;
+$dark-tertiary-color: #E57373;
+$dark-background-start: #000000;
+$dark-background-end: #9CA3AF;
+$dark-foreground: #FFFFFF;
+
+$dark-sidebar-bg: #1F2937;
+$dark-sidebar-text: #f8f9fa;
+
+// Declare all the variables here
 $primary-color: #B20000;
 $secondary-color: #FEF4C0;
 $tertiary-color: #FD292F;
