API updated to http-only cookies Server-side API data fetch added Recipe navigation added

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,3 +1,8 @@
 @use "abstracts/index" as *;
 @use "base/base";
 @use "base/sidebar";
+
+.quill {
+    display: flex;
+    flex-direction: column;
+}
