--- a/src/styles/scss/abstracts/_variables.scss
+++ b/src/styles/scss/abstracts/_variables.scss
@@ -1,3 +1,10 @@
+/*
+Version: 1.1
+Last edited by: Natalia Pakhomova
+Last edit date: 03/06/2024
+Base variables for the project
+*/
+
 // Light mode colors
 $light-primary-color: #B20000;
 $light-secondary-color: #FEF4C0;
@@ -5,7 +12,6 @@ $light-tertiary-color: #FD292F;
 $light-background-start: #D6DBDC;
 $light-background-end: #FFFFFF;
 $light-foreground: #000000;
-
 $light-sidebar-bg: #B20000;
 $light-sidebar-text: #ffffff;
 
@@ -16,7 +22,6 @@ $dark-tertiary-color: #E57373;
 $dark-background-start: #000000;
 $dark-background-end: #9CA3AF;
 $dark-foreground: #FFFFFF;
-
 $dark-sidebar-bg: #1F2937;
 $dark-sidebar-text: #f8f9fa;
 
