--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -25,12 +25,14 @@ Main stylesheet for the project
     }
 }
 
+// Skeleton loader style for loading image
 .skeleton-loader {
   background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 37%, #f0f0f0 63%);
   background-size: 400% 100%;
   animation: skeleton-loading 1.4s ease infinite;
 }
 
+// Skeleton loader animation keyframes
 @keyframes skeleton-loading {
   0% {
     background-position: 200% 0;
@@ -39,3 +41,21 @@ Main stylesheet for the project
     background-position: -200% 0;
   }
 }
+
+// Spinner loader styles
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border-left-color: #09f;
+    animation: spin 1s linear infinite;
+  }
+  
+  // Spinner loader animation keyframes
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
